syntax = "proto3";

package authmodel.hello;
option go_package = "auth-service/app/proto-gen/message";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}